--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,12 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
       # - ./mysql:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3306"]
+      interval: 30s
+      timeout: 20s
+      retries: 5
+      start_period: 30s
   phpmyadmin:
     image: phpmyadmin:latest
     container_name: phpmyadmin-container
@@ -57,7 +63,8 @@ services:
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=th1enlm02_root
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - frontend-net
       - backend-net
