--- a/service.yaml
+++ b/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: studentfrontend
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 3001
@@ -19,7 +19,7 @@ metadata:
 spec:
   selector:
     app: studentbackend
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 8081
@@ -29,11 +29,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service-headless
+  name: mysql-service
 spec:
   selector:
     app: mysql
-  clusterIP: None
+  type: NodePort
   ports:
     - protocol: TCP
       port: 3307
@@ -47,7 +47,7 @@ metadata:
 spec:
   selector:
     app: phpmyadmin
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 81
