--- a/service.yaml
+++ b/service.yaml
@@ -33,10 +33,9 @@ metadata:
 spec:
   selector:
     app: mysql
-  type: NodePort
+  clusterIP: None
   ports:
-    - protocol: TCP
-      port: 3307
+    - port: 3307
       targetPort: 3306
 
 ---
