--- a/deployment.yaml
+++ b/deployment.yaml
@@ -46,23 +46,23 @@ spec:
             - name: DB_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: mysql-configMap
+                  name: mysql_configMap
                   key: host
             - name: DB_NAME
               valueFrom:
                 configMapKeyRef:
-                  name: mysql-configMap
+                  name: mysql_configMap
                   key: dbName
             - name: DB_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mysql-secrets
-                  key: mysql-username
+                  name: mysql_secrets
+                  key: mysql_username
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mysql-secrets
-                  key: mysql-root_password
+                  name: mysql_secrets
+                  key: mysql_root_password
 
 ---
 apiVersion: apps/v1
@@ -92,28 +92,28 @@ spec:
             - name: MYSQL_DATABASE
               valueFrom:
                 configMapKeyRef:
-                  name: mysql-configMap
+                  name: mysql_configMap
                   key: dbName
             - name: MYSQL_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: mysql-configMap
+                  name: mysql_configMap
                   key: host
             - name: MYSQL_USER
               valueFrom:
                 secretKeyRef:
-                  name: mysql-secrets
-                  key: mysql-username
+                  name: mysql_secrets
+                  key: mysql_username
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mysql-secrets
-                  key: mysql-password
+                  name: mysql_secrets
+                  key: mysql_password
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mysql-secrets
-                  key: mysql-root_password
+                  name: mysql_secrets
+                  key: mysql_root_password
               
 ---
 apiVersion: apps/v1
