--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-secrets
+  name: mysql_secrets
 data:
-  mysql-username: dGgxZW5sbTAy
-  mysql-password: dGgxZW5sbTAy
-  mysql-root_password: dGgxZW5sbTAyX3Jvb3Q=
+  mysql_username: dGgxZW5sbTAy
+  mysql_password: dGgxZW5sbTAy
+  mysql_root_password: dGgxZW5sbTAyX3Jvb3Q=
