--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql_secrets
+  name: mysqlSecrets
 data:
-  mysql_username: dGgxZW5sbTAy
-  mysql_password: dGgxZW5sbTAy
-  mysql_root_password: dGgxZW5sbTAyX3Jvb3Q=
+  username: dGgxZW5sbTAy
+  password: dGgxZW5sbTAy
+  rootPassword: dGgxZW5sbTAyX3Jvb3Q=
