--- a/configMap.yaml
+++ b/configMap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mysql_configMap
+  name: mysqlConfigMap
 data:
   host: mysql
   dbName: studentdb
