--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysqlSecrets
+  name: mysql-secrets
 data:
   username: dGgxZW5sbTAy
   password: dGgxZW5sbTAy
