--- a/configMap.yaml
+++ b/configMap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mysqlConfigMap
+  name: mysql-configmap
 data:
   host: mysql
   dbName: studentdb
