--- a/deployment.yaml
+++ b/deployment.yaml
@@ -112,7 +112,7 @@ spec:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mysql_secrets
+                  name: mysql-secrets
                   key: rootPassword
               
 ---
