--- a/configMap.yaml
+++ b/configMap.yaml
@@ -1,7 +1,30 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mysql-configmap
+  name: auth-service-mysql-configmap
 data:
-  host: mysql
-  dbName: studentdb
+  dbName: auth_service
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: student-service-mysql-configmap
+data:
+  dbName: student_service
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: lecturer-service-mongodb-configmap
+data:
+  dbName: lecturer_service
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: class-service-postgresql-configmap
+data:
+  dbName: class_service
