--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,13 +85,13 @@ services:
     volumes:
       - mongodb-data:/data/db
     healthcheck:
-      test: ["CMD","mongosh", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 10s
       retries: 3
       start_period: 5s
   mongo-express:
-    image: mongo-express:latest
+    image: mongo-express:1-20
     container_name: mongo-express-container
     restart: always
     ports:
@@ -100,9 +100,10 @@ services:
       - backend-network
     environment:
       - ME_CONFIG_BASICAUTH=false
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${ME_CONFIG_MONGODB_ADMINUSERNAME}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${ME_CONFIG_MONGODB_ADMINPASSWORD}
+      - ME_CONFIG_MONGODB_SERVER=mongodb-container
+      - ME_CONFIG_MONGODB_URL=mongodb://mongodb-container:27017
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=th1enlm02_root
     depends_on:
       mongodb:
         condition: service_healthy
@@ -214,8 +215,7 @@ services:
       - frontend-network
       - backend-network
     depends_on:
-      mongodb:
-        condition: service_healthy
+      - mongodb
   class-management-class-service:
     build:
       context: ./class-management-class-service
