--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,13 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: class-management-ingress
-  # annotations:
-
 spec:
   rules:
   - host: NT533O21_group07.com
     http:
       paths:
-        - backend:
-            serviceName: class-management-fe
-            servicePort: 3000
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: class-management-fe
+            port:
+              number: 3000
