--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,13 +21,25 @@ spec:
             - containerPort: 3000
           env:
             - name: REACT_APP_BASE_URL_AUTH
-              value: http://auth-service:3077
+              valueFrom:
+                configMapKeyRef:
+                  name: base-url-configmap
+                  key: REACT_APP_BASE_URL_AUTH
             - name: REACT_APP_BASE_URL_STUDENT
-              value: http://student-service:8080
+              valueFrom:
+                configMapKeyRef:
+                  name: base-url-configmap
+                  key: REACT_APP_BASE_URL_STUDENT
             - name: REACT_APP_BASE_URL_LECTURER
-              value: http://lecturer-service:5000
+              valueFrom:
+                configMapKeyRef:
+                  name: base-url-configmap
+                  key: REACT_APP_BASE_URL_LECTURER
             - name: REACT_APP_BASE_URL_CLASS
-              value: http://class-service:8000
+              valueFrom:
+                configMapKeyRef:
+                  name: base-url-configmap
+                  key: REACT_APP_BASE_URL_CLASS
 
 ---
 apiVersion: apps/v1
