--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,25 +21,13 @@ spec:
             - containerPort: 3000
           env:
             - name: REACT_APP_BASE_URL_AUTH
-              valueFrom:
-                configMapKeyRef:
-                  name: base-url-configmap
-                  key: REACT_APP_BASE_URL_AUTH
+              value: http://auth-service:3077
             - name: REACT_APP_BASE_URL_STUDENT
-              valueFrom:
-                configMapKeyRef:
-                  name: base-url-configmap
-                  key: REACT_APP_BASE_URL_STUDENT
+              value: http://student-service:8080
             - name: REACT_APP_BASE_URL_LECTURER
-              valueFrom:
-                configMapKeyRef:
-                  name: base-url-configmap
-                  key: REACT_APP_BASE_URL_LECTURER
+              value: http://lecturer-service:5000
             - name: REACT_APP_BASE_URL_CLASS
-              valueFrom:
-                configMapKeyRef:
-                  name: base-url-configmap
-                  key: REACT_APP_BASE_URL_CLASS
+              value: http://class-service:8000
 
 ---
 apiVersion: apps/v1
