--- a/service.yaml
+++ b/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: class-management-fe
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 3000
