--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,7 +144,7 @@ services:
         condition: service_healthy
   class-mangement-fe:
     build:
-      context: ./class-management-fe
+      context: ./class-management-FE
       dockerfile: Dockerfile
     image: th1enlm02/class-management-fe
     container_name: class-management-fe-container
