--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
       - stage
+
 jobs:
   sonar_scan:
     runs-on: ubuntu-latest
@@ -17,6 +18,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+      
       - name: Set up SonarQube Scanner
         uses: sonarsource/sonarqube-scan-action@master
         env:
@@ -25,7 +27,6 @@ jobs:
         with:
           projectBaseDir: .
           args: >
-            -X
             -Dsonar.projectKey=devops
             -Dsonar.sources=.
             -Dsonar.exclusions=**/*.java,**/node_modules/**,**/*.json
@@ -41,7 +42,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive 
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
@@ -53,7 +54,7 @@ jobs:
         with:
           username: ${{ secrets.HARBOR_USERNAME }}
           password: ${{ secrets.HARBOR_PASSWORD }}
-          registry: harbor.th1enlm02.live
+          registry: ${{ secrets.HARBOR_REGISTRY }}
       
       - name: Set environment variables
         id: set-env
